added dev manifest

--- a/appread/frameRedirect.html
+++ b/appread/frameRedirect.html
@@ -21,6 +21,8 @@
 
         var outputDiv = document.getElementById('output');
         outputDiv.innerHTML = window.location.href;
+		
+		//document.writeln(window.location.href);
 
   </script>
 
