--- a/appread/index.html
+++ b/appread/index.html
@@ -43,6 +43,19 @@
   <script src="app.routes.js"></script>
   <script src="home/home.controller.js"></script>
 
+    <div id="output" class=""></div>
+
+    <script type="text/javascript">
+
+        // just spit out the current URL so we can see what we've received from ADAL on the callback.
+
+        var outputDiv = document.getElementById('output');
+        outputDiv.innerHTML = window.location.href;
+		
+		//document.writeln(window.location.href);
+
+  </script>
+
 </body>
 
 </html>
