dont log to console as well

--- a/appread/index.html
+++ b/appread/index.html
@@ -68,7 +68,7 @@
         } else {
             logger.innerHTML += message + '<br />';
         }
-        old(message);
+        //old(message);
     }
 })();
 </script>
