added debug angular, plus added verbose adal logging

--- a/appread/frameRedirect.html
+++ b/appread/frameRedirect.html
@@ -8,7 +8,17 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
 
     <script src="//appsforoffice.microsoft.com/lib/1/hosted/Office.js"></script>
+<style>
 
+iframe {
+    display: block !important;
+    width: 300px !important;
+    height: 100px !important;
+    visibility: visible !important;
+    position: relative !important;
+ }
+
+</style>
 </head>
 
 <body>
