--- a/appread/index.html
+++ b/appread/index.html
@@ -10,8 +10,13 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-route.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-sanitize.min.js"></script>
+  
   <script src="https://secure.aadcdn.microsoftonline-p.com/lib/1.0.0/js/adal.min.js"></script>
   <script src="https://secure.aadcdn.microsoftonline-p.com/lib/1.0.0/js/adal-angular.min.js"></script>
+  <!--
+  <script src="../scripts/modified.adal/adal.js"></script>
+  <script src="../scripts/modified.adal/adal-angular.js"></script>
+  -->
   <link href="//appsforoffice.microsoft.com/fabric/1.0/fabric.min.css" rel="stylesheet">
   <!--<link href="//appsforoffice.microsoft.com/fabric/1.0/fabric.components.min.css" rel="stylesheet">-->
   <script src="//appsforoffice.microsoft.com/lib/1/hosted/Office.js"></script>
@@ -29,6 +34,20 @@
 
   <link href="../content/Office.css" rel="stylesheet" type="text/css" />
   <link href="../bower_components/microsoft.office.js/styles/OfficeThemes.css" rel="stylesheet" type="text/css" />
+
+
+<style>
+
+iframe {
+    display: block !important;
+    width: 300px !important;
+    height: 100px !important;
+    visibility: visible !important;
+    position: relative !important;
+ }
+
+</style>
+
 </head>
 
 <body>
@@ -59,14 +78,23 @@
 <br/><br/><strong>LOG</strong><br/>
     <div id="log"></div>
 <script type="text/javascript">
+
+window.Logging = {
+     level: 3,
+     log: function (message) {
+       console.log(message);
+     }
+   };
+
 (function () {
     var old = console.log;
     var logger = document.getElementById('log');
+
     console.log = function (message) {
-        if (typeof message == 'object') {
-            logger.innerHTML += (JSON && JSON.stringify ? JSON.stringify(message) : message) + '<br />';
+       if (typeof message == 'object') {
+           logger.innerHTML += (JSON && JSON.stringify ? JSON.stringify(message) : message) + '<br />';
         } else {
-            logger.innerHTML += message + '<br />';
+           logger.innerHTML += message + '<br />';
         }
         //old(message);
     }
