manually redirect to AD

--- a/appread/frameRedirect.html
+++ b/appread/frameRedirect.html
@@ -22,7 +22,7 @@ iframe {
 </head>
 
 <body>
-
+FRAMEREDIRECT.HTML<br/>
     <div id="output" class=""></div>
 
     <script type="text/javascript">
