--- a/appread/index.html
+++ b/appread/index.html
@@ -7,33 +7,7 @@
   <title></title>
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
 
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.min.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-route.min.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-sanitize.min.js"></script>
-  <!--
-  <script src="https://secure.aadcdn.microsoftonline-p.com/lib/1.0.0/js/adal.min.js"></script>
-  <script src="https://secure.aadcdn.microsoftonline-p.com/lib/1.0.0/js/adal-angular.min.js"></script>
-  -->
-  <script src="../scripts/modified.adal/adal.js"></script>
-  <script src="../scripts/modified.adal/adal-angular.js"></script>
-  
-  <link href="//appsforoffice.microsoft.com/fabric/1.0/fabric.min.css" rel="stylesheet">
-  <!--<link href="//appsforoffice.microsoft.com/fabric/1.0/fabric.components.min.css" rel="stylesheet">-->
   <script src="//appsforoffice.microsoft.com/lib/1/hosted/Office.js"></script>
-
-  <!-- To enable offline debugging using a local reference to Angular-*.js & Office.js, use: -->
-  <!--<script src="../bower_components/angular/angular.min.js"></script>  -->
-  <!--<script src="../bower_components/angular-route/angular-route.min.js"></script>  -->
-  <!--<script src="../bower_components/angular-sanitize/angular-sanitize.min.js"></script> -->
-  <!--<script src="../bower_components/adal-angular/dist/adal.min.js"></script>  -->
-  <!--<script src="../bower_components/adal-angular/dist/adal-angular.min.js"></script>  -->
-  <!--<script src="../bower_components/microsoft.office.js/scripts/Office/1/office.js"></script>  -->
-  <!--<script src="../content/fabric.min.css"></script>  -->
-  <!--<script src="../content/fabric.components.min.css"></script>  -->
-  <!--<script src="../scripts/jquery.fabric.min.js"></script>  -->
-
-  <link href="../content/Office.css" rel="stylesheet" type="text/css" />
-  <link href="../bower_components/microsoft.office.js/styles/OfficeThemes.css" rel="stylesheet" type="text/css" />
 
 
 <style>
@@ -51,17 +25,7 @@ iframe {
 </head>
 
 <body>
-
-  <div id="container">
-    <div data-ng-view></div>
-  </div>
-
-  <script src="app.module.js"></script>
-  <script src="app.config.js"></script>
-  <script src="app.adalconfig.js"></script>
-  <script src="app.routes.js"></script>
-  <script src="home/home.controller.js"></script>
-
+INDEX.HTML
 <br/><br/><strong>URL</strong><br/>
     <div id="output" class=""></div>
  <script type="text/javascript">
@@ -99,6 +63,13 @@ window.Logging = {
         //old(message);
     }
 })();
+
+var encodedReturnUri = encodeURI('https://colligo-adal-owa-test.azurewebsites.net/appread/frameRedirect.html');
+
+
+window.location.replace('https://login.microsoftonline.com/common/oauth2/authorize?response_type=id_token&client_id=3b154108-ca2f-4c5c-8aca-4466e141dfd9' + 
+'&redirect_uri=' + encodedReturnUri + '&state=abcde&nux=1&nonce=abcde');
+
 </script>
    
 
